--- a/style.css
+++ b/style.css
@@ -15,8 +15,7 @@ header {
   background-color: #eeeeee;
   padding: 35px;
   text-align: center;
-  box-shadow: #ccc 0px 0px 7px;
-  border: 2px solid #ccc;
+  box-shadow: #eeeeee 0px 0px 7px;
 }
 
 ul {
@@ -137,7 +136,6 @@ footer {
   background-color: #eeeeee;
   padding: 35px;
   text-align: center;
-  box-shadow: #ccc 0px 0px 7px;
-  border: 2px solid #ccc;
+  box-shadow: #eeeeee 0px 0px 7px;
   border-radius: 10px 10px 0px 0px;
 }
