--- a/style.css
+++ b/style.css
@@ -31,7 +31,8 @@ li {
   display: inline;
   list-style-type: none;
   font-weight: 600;
-  margin: 0px 100px;
+  padding: 100px;
+  margin: 0 auto;
 }
 
 li > a {
