--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ iframe {
 }
 
 #submitBtn:hover {
-  background-color: #fa7d09;
+  background-color: #F2613F;
   color: #eeeeee;
   opacity: 1;
   border: none;
