--- a/style.css
+++ b/style.css
@@ -12,18 +12,14 @@
 }
 
 header {
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	gap: 10px;
 	padding-top: 35px;
   	background-color: #EFECEC;
-  	box-shadow: #EFECEC 0px 0px 7px;
 	font-size: clamp(12px, 1vw, 24px);
 	text-align: center;
 }
 
 .image {
+	margin: 5px auto;
 	width: clamp(30px, 2vw, 40px);
 	height: clamp(30px, 2vw, 40px);
 	cursor: pointer;
@@ -33,7 +29,6 @@ header {
 ul {
   	background-color: #F2613F;
   	border-radius: 0px 0px 10px 10px;
-	box-shadow: #F2613F 0px 0px 7px;
 	padding: 30px;
   	text-align: center;
 }
@@ -59,7 +54,6 @@ li > a {
   	border-spacing: 20px;
   	background-color: #EFECEC;
   	border-radius: 10px;
-  	box-shadow: #ccc 0px 0px 7px;
   	border: 2px solid #ccc;
 }
 
@@ -69,30 +63,22 @@ li > a {
 	text-align: left;
 }
 
-.infoTd {
-	display: flex;
-	justify-content: flex-start;
-	gap: 5px;
-}
-
-.infoTd > div {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
-}
-
-.infoTd > img {
+.soTd > img {
 	width: clamp(35px, 15%, 100px);
 	height: clamp(35px, 15%, 100px);
+	float: inline-start;
 }
 
 .soTd,
 .gamingTd {
   	background-color: #F2613F;
   	border-radius: 10px;
-  	box-shadow: #F2613F 0px 0px 7px;
-  	padding: 30px 15px;
+	padding: 15px;
 	font-size: clamp(9px, 1vw, 16px);
+}
+
+.soText {
+	line-height: clamp(11px, 1.9vw, 50px);
 }
 
 
@@ -104,7 +90,6 @@ li > a {
 #kontakti {
   	margin-top: 55px;
   	background-color: #EFECEC;
-  	box-shadow: #ccc 0px 0px 7px;
   	border-radius: 10px;
   	border: 2px solid #ccc;
 }
@@ -154,12 +139,10 @@ iframe {
 }
 
 footer {
-  	margin: 0 auto;
-  	margin-top: 65px;
+  	margin: 55px auto 0;
   	background-color: #EFECEC;
-  	padding: 35px;
+	padding: 35px;
   	text-align: center;
-  	box-shadow: #eeeeee 0px 0px 7px;
   	border-radius: 10px 10px 0px 0px;
 	font-size: clamp(10px, 1vw, 14px);
 }
@@ -178,34 +161,25 @@ footer {
 header {
   	background-color: #212427;
   	text-align: center;
-  	box-shadow: none;
 }
 
 ul {
 	background-color: #9B3922;
-	box-shadow: #9B3922 0px 0px 7px;
 }
 
-video {
-	box-shadow: none !important;
-}
-	
 .so,
 .gaming {
   	border: 2px solid #212427;
-  	box-shadow: none;
   	background-color: #212427;
 }
 
 .soTd,
 .gamingTd {
-  	box-shadow: #9B3922 0px 0px 7px;
   	background-color: #9B3922;
 }
 #kontakti {
   	margin-top: 55px;
   	background-color: #212427;
-  	box-shadow: none;
   	border-radius: 10px;
   	border: 2px solid #212427;
 }
@@ -222,12 +196,11 @@ input, textarea {
 }
 
 footer {
-  	margin: 0 auto;
-  	margin-top: 65px;
+  	margin: 55px auto 0;
   	background-color: #212427;
   	padding: 35px;
   	text-align: center;
-  	box-shadow: #212427 0px 0px 7px;
+	line-height: 150%;
   	border-radius: 10px 10px 0px 0px;
 }
 
