--- a/style.css
+++ b/style.css
@@ -18,12 +18,9 @@ header {
 	text-align: center;
 }
 
-
-.image {
-	position: relative;
-	width: clamp(30px, 2vw, 40px);
-	height: clamp(30px, 2vw, 40px);
-	cursor: pointer;
+svg {
+	margin: 0 auto;
+	display: block;
 }
 
 ul {
@@ -46,9 +43,11 @@ li > a {
   	text-decoration: none;
 }
 
-svg {
-	margin: 0 auto;
-	display: block;
+.image {
+	margin: 10px auto;
+	width: clamp(30px, 2vw, 40px);
+	height: clamp(30px, 2vw, 40px);
+	cursor: pointer;
 }
 
 .so,
